--- a/stable-rc/linux-bfq-git/PKGBUILD
+++ b/stable-rc/linux-bfq-git/PKGBUILD
@@ -51,7 +51,7 @@ _use_current=
 pkgbase=linux-bfq-git
 # pkgname=('linux-bfq-git' 'linux-bfq-git-headers' 'linux-bfq-git-docs')
 _srcname=linux-stable-rc
-pkgver=4.11.12.r0.gbd1a9eb6a755
+pkgver=4.11.12.0.gbd1a9eb6a755
 pkgrel=3
 arch=('i686' 'x86_64')
 url="http://algo.ing.unimo.it"
@@ -60,8 +60,8 @@ options=('!strip')
 makedepends=('kmod' 'inetutils' 'bc' 'git')
 _bfqrel=v7r11
 _bfqver=v8r11
-_bfqpath="http://algo.ing.unimo.it/people/paolo/disk_sched/patches/4.11.0-${_bfqver}"
-#_bfqpath="https://pf.natalenko.name/mirrors/bfq/4.11.0-${_bfqver}"
+#_bfqpath="http://algo.ing.unimo.it/people/paolo/disk_sched/patches/4.11.0-${_bfqver}"
+_bfqpath="https://pf.natalenko.name/mirrors/bfq/4.11.0-${_bfqver}"
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/4.11"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/4.11"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v4.9+_kernel_v3.15+.patch"
