--- a/stable/linux-uksm-git/PKGBUILD
+++ b/stable/linux-uksm-git/PKGBUILD
@@ -51,7 +51,7 @@ _use_current=
 pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _srcname=linux-stable
-pkgver=4.13.5.r0.g06b0d88bfe61
+pkgver=4.13.5.0.g06b0d88bfe61
 pkgrel=2
 arch=('i686' 'x86_64')
 url="https://github.com/dolohow/uksm"
@@ -78,7 +78,7 @@ _kernelname=${pkgbase#linux}
 pkgver() {
   cd "${_srcname}"
 
-  git describe --long | sed -E 's/^v//;s/([^-]*-g)/r\1/;s/-/./g;s/\.rc/rc/'
+  git describe --long | sed -E 's/^v//;s/([^-]*-g)/\1/;s/-/./g;s/\.rc/rc/'
 } 
 
 prepare() {
