--- a/stable-rc/linux-uksm-git/PKGBUILD
+++ b/stable-rc/linux-uksm-git/PKGBUILD
@@ -48,7 +48,7 @@ _use_current=
 pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _srcname=linux-stable-rc
-pkgver=4.15.9.146.g2ad27e8a3cad
+pkgver=4.16.1.19.g132318e83781
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -56,13 +56,13 @@ license=('GPL2')
 options=('!strip')
 makedepends=('git' 'kmod' 'inetutils' 'bc' 'libelf')
 _uksm_path="https://raw.githubusercontent.com/dolohow/uksm/master"
-_uksm_patch="uksm-4.15.patch"
+_uksm_patch="uksm-4.16.patch"
 _gcc_name="kernel_gcc_patch"
 _gcc_rel='20180310'
 _gcc_path="https://github.com/graysky2/kernel_gcc_patch/archive"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v4.9+_kernel_v4.13+.patch"
 
-source=('git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.git#branch=linux-4.15.y'
+source=('git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.git#branch=linux-4.16.y'
         "${_gcc_name}-${_gcc_rel}.tar.gz::${_gcc_path}/${_gcc_rel}.tar.gz"
         "${_uksm_path}/${_uksm_patch}"
          # the main kernel config files
@@ -76,7 +76,9 @@ source=('git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.gi
          # standard config files for mkinitcpio ramdisk
         'linux.preset'
         '0001-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch'
-        '0002-drm-i915-edp-Only-use-the-alternate-fixed-mode-if-it.patch')
+        '0002-drm-i915-edp-Only-use-the-alternate-fixed-mode-if-it.patch'
+        '0003-Partially-revert-swiotlb-remove-various-exports.patch'
+        '0004-Fix-vboxguest-on-guests-with-more-than-4G-RAM.patch')
 
 _kernelname=${pkgbase#linux}
 : ${_kernelname:=-uksm-git} 
@@ -97,6 +99,14 @@ prepare() {
     ### Fix https://bugs.archlinux.org/task/56711
         msg "Fix #56711"
         patch -Np1 -i ../0002-drm-i915-edp-Only-use-the-alternate-fixed-mode-if-it.patch
+    
+    ### NVIDIA driver compat
+        msg "NVIDIA driver compat"
+        patch -Np1 -i ../0003-Partially-revert-swiotlb-remove-various-exports.patch
+    
+    ### Fix https://bugs.archlinux.org/task/58153
+        msg "Fix #58153"
+        patch -Np1 -i ../0004-Fix-vboxguest-on-guests-with-more-than-4G-RAM.patch
     
     ### Patch source with UKSM
         msg "Patching source with UKSM"
@@ -282,9 +292,6 @@ _package-headers() {
     install -Dt "${_builddir}/drivers/md" -m644 drivers/md/*.h
     install -Dt "${_builddir}/net/mac80211" -m644 net/mac80211/*.h
 
-    # http://bugs.archlinux.org/task/9912
-    install -Dt "${_builddir}/drivers/media/dvb-core" -m644 drivers/media/dvb-core/*.h
-
     # http://bugs.archlinux.org/task/13146
     install -Dt "${_builddir}/drivers/media/i2c" -m644 drivers/media/i2c/msp3400-driver.h
 
@@ -355,11 +362,13 @@ done
 
 sha512sums=('SKIP'
             '079e34ec7bf3ef36438c648116e24c51e00ea8608a1d8b5776164478522d6a96dcab5fe0431e8e9a6282c11a1edd177e1b68fc971a81717b297e199efc101963'
-            '337b220e5c5f240bf195fcf174974c03b127598723fc4ea5813e5c32154048ac4193737418b21e720e9034ad53589b59b898d0e648925db7e2db2ad57acd7fe7'
-            '01728b8601b5f227d2bb6bb0f5899c95f01546eb5069f9e88fe01d6e3883f65f4eec0bdf61924ed5677346b6bfd95866cb203d30a9519ed8eed0cf862a0a3ad1'
+            'ab962157c2c20faf0bd164a82c2e28ce35fd581d640409ae6419dc2a64c82b7f49e7215149de0bc028dd3d517434160d68127b05137f6b6611641cc871f6c76e'
+            'e6caed4fb4895bf60f0f714254afe84a67b79766024084ac9072492b5c19b8a194705d3049166b10dc5d9eb0f0033395f6a84703f40e799f186e46abdff46ebb'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '4a8b324aee4cccf3a512ad04ce1a272d14e5b05c8de90feb82075f55ea3845948d817e1b0c6f298f5816834ddd3e5ce0a0e2619866289f3c1ab8fd2f35f04f44'
             '6346b66f54652256571ef65da8e46db49a95ac5978ecd57a507c6b2a28aee70bb3ff87045ac493f54257c9965da1046a28b72cb5abb0087204d257f14b91fd74'
             '2dc6b0ba8f7dbf19d2446c5c5f1823587de89f4e28e9595937dd51a87755099656f2acec50e3e2546ea633ad1bfd1c722e0c2b91eef1d609103d8abdc0a7cbaf'
-            '99c4b03829317b03839c4bcf8a5ffead5918504b95b4bf2733ca38ec5a153a03781aa4b5e6f4297cc12c1e63a07a74da04b730f107ede212fe247e658933853b'
-            '7621840ad2f9760b30885b46b1b4e5b2b51d726a7ee771ce7649fb217c3af16577edb65c326b0754cf1a87b00fb981f0697ce916b3dcaf80731bc9a373aa685c')
+            '0253ef24869be7201e15a4a59924a97a3448206759f2a5868cdd1750ec6588b5ec1319e5f5866e8dcc98a25aaab93bb06843838249e44168cf47e70cb8eba446'
+            '057829b8befb355c59a2f4614221c1dfb35b9ef11957333cf10f39dc48bdb39d4623e85fc7db75eca2ced56315e1ef49d2087c05b9bd9f134caf403d73d79495'
+            '37e8d7a821b2f352f285286fc6ed5085b13b950b20295c8eea0f0951615e9d02d72367e431c20bb395ace50eda0cf91417633184a95f64a16cc301ae1bafb2f8'
+            '598ddc2e1819419755b1e3b8655b9368e694f68daea01d4732bd7221e481968a7d6102e042e6b61d05dfd65345f40b683808636f5ff3385397596e7a79640c1f')
