--- a/stable-rc/linux-uksm-git/PKGBUILD
+++ b/stable-rc/linux-uksm-git/PKGBUILD
@@ -43,13 +43,16 @@ _localmodcfg=
 # a new kernel is released, but again, convenient for package bumps.
 _use_current=
 
+### Running with a 1000 HZ tick rate 
+_1k_HZ_ticks=
+
 ### Do not edit below this line unless you know what you're doing
 
 pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _srcname=linux-stable-rc
-pkgver=4.16.2.0.g216f33936eaa
-pkgrel=2
+pkgver=4.16.2.69.g8485fd17d21b
+pkgrel=1
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
 license=('GPL2')
@@ -148,7 +151,15 @@ END
 			warning "Aborting!"
 			exit
 		fi
-	fi    
+	fi
+	
+	### Optionally set tickrate to 1000 
+	if [ -n "$_1k_HZ_ticks" ]; then
+		msg "Setting tick rate to 1k..."
+		sed -i -e 's/^CONFIG_HZ_300=y/# CONFIG_HZ_300 is not set/' \
+                    -i -e 's/^# CONFIG_HZ_1000 is not set/CONFIG_HZ_1000=y/' \
+                     i -e 's/^CONFIG_HZ=300/CONFIG_HZ=1000/' .config
+	fi
 
 	### Optionally disable NUMA for 64-bit kernels only
         # (x86 kernels do not support NUMA)
@@ -373,7 +384,7 @@ done
 sha512sums=('SKIP'
             '079e34ec7bf3ef36438c648116e24c51e00ea8608a1d8b5776164478522d6a96dcab5fe0431e8e9a6282c11a1edd177e1b68fc971a81717b297e199efc101963'
             'ab962157c2c20faf0bd164a82c2e28ce35fd581d640409ae6419dc2a64c82b7f49e7215149de0bc028dd3d517434160d68127b05137f6b6611641cc871f6c76e'
-            'd3937ab4219aa17aaa38b2005785062af3b4ab5308f3516a9d071a35a90811a0bed2e37e47390db34740c0203e849a930659a793a8e8bc7ec15f67474a67843f'
+            '58310fdad1ef2f198846a6be1d49512d437ae499159a8993afa72e9ffb5169c22130bc49a36b2e991e9fbbd4b724bbe0e49d55326f55358c232f681a51fc3028'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '4a8b324aee4cccf3a512ad04ce1a272d14e5b05c8de90feb82075f55ea3845948d817e1b0c6f298f5816834ddd3e5ce0a0e2619866289f3c1ab8fd2f35f04f44'
             '6346b66f54652256571ef65da8e46db49a95ac5978ecd57a507c6b2a28aee70bb3ff87045ac493f54257c9965da1046a28b72cb5abb0087204d257f14b91fd74'
