--- a/stable-rc/linux-uksm-git/PKGBUILD
+++ b/stable-rc/linux-uksm-git/PKGBUILD
@@ -51,7 +51,7 @@ _1k_HZ_ticks=
 pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _srcname=linux-stable-rc
-pkgver=4.16.5.0.ge5ce9f6879d3
+pkgver=4.16.5.82.gd804f93aa2d9
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -81,8 +81,7 @@ source=('git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.gi
         '0001-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch'
         '0002-drm-i915-edp-Only-use-the-alternate-fixed-mode-if-it.patch'
         '0003-Partially-revert-swiotlb-remove-various-exports.patch'
-        '0004-Fix-vboxguest-on-guests-with-more-than-4G-RAM.patch'
-        '0005-net-aquantia-Regression-on-reset-with-1.x-firmware.patch')
+        '0004-Fix-vboxguest-on-guests-with-more-than-4G-RAM.patch')
 
 _kernelname=${pkgbase#linux}
 : ${_kernelname:=-uksm-git} 
@@ -111,10 +110,6 @@ prepare() {
     ### Fix https://bugs.archlinux.org/task/58153
         msg "Fix #58153"
         patch -Np1 -i ../0004-Fix-vboxguest-on-guests-with-more-than-4G-RAM.patch
-
-    ### Fix https://bugs.archlinux.org/task/58174
-        msg "Fix #58174"
-        patch -Np1 -i ../0005-net-aquantia-Regression-on-reset-with-1.x-firmware.patch
     
     ### Patch source with UKSM
         msg "Patching source with UKSM"
@@ -384,8 +379,7 @@ sha512sums=('SKIP'
             '4a8b324aee4cccf3a512ad04ce1a272d14e5b05c8de90feb82075f55ea3845948d817e1b0c6f298f5816834ddd3e5ce0a0e2619866289f3c1ab8fd2f35f04f44'
             '6346b66f54652256571ef65da8e46db49a95ac5978ecd57a507c6b2a28aee70bb3ff87045ac493f54257c9965da1046a28b72cb5abb0087204d257f14b91fd74'
             '2dc6b0ba8f7dbf19d2446c5c5f1823587de89f4e28e9595937dd51a87755099656f2acec50e3e2546ea633ad1bfd1c722e0c2b91eef1d609103d8abdc0a7cbaf'
-            'cfcf6cb510b145039075442f397b9526c103334f8728cae1fb70395dabed3ff0105ce9da7412f98a744e62ec2cae8aa8406b39d9f9ea6d8c0a04bd6c78605885'
-            'ca10d5457633a5504b09007a299114b32fd2f84aeb2381138ea5ecaf9c3da76b84efce63f9e23ea7b9b70ae7c05c7c29756c5a95abf599155fff73b24926d5ed'
-            'b12a068e3158b5281ea6f471a4065fb9fb1e51d4b8c17d0bbf6556c2afcf257d0905948b336f72752717c136aa26ca88e3a81abd318b5e48a085bd050ea89ba3'
-            '7a1c931269f3e801496dd8dad049b65fb28212d90179640b8ac0d7f380e0f1378dc8f43624893f200e99678793300d331701fad3826b059c9336f7b16ef8a521'
-            '23ea6d086bc0a483c08b28d8a64a47636024322d38a17bb5994df4cd25cbd1d29be39a7ed0d8c2305409efdb455c5b5f3fd9d72ca10d3c13df66185a5d089a8c')
+            '23edb1f606212bef6e9f8c395858f46108019d9a0fb9e604b06c0c186927325e182c2b09b5336ef01e68b80c374f751de1ca3edb8ecde7ab4e0e71669cfe4b35'
+            '0ff56daee47c0557bbce45952c85e8a72ef1c58ff66b75f232d6a4823dc1a0de9e52880396e72b4769ea4fa780478249f44f08e038d05a2a9e374f0486661c49'
+            '15efd1a371b6d501b9e1ce813cef477835e20a74b5ee02fe8879bb3155ba072855cc3b22a16ea7f39dc023335c07e60476bb189ec929a3f3430fc35885701b2c'
+            '48b12084b00dd475e876c03e1242a5d06701e94579abf2c318d810bf55c45d54413ec338eca01f42f2e2688f78e5cdfcc2994c55da011d2d64b02df829a5979f')
